// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input in RTL renders Bg 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <div
          class="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
        >
          <div
            class="w-full"
          >
            <span
              class="block relative w-full max-w-full rounded-moon-i-sm bg-gohan [&_select]:bg-frieza-10 [&_select]:text-piccolo [&_svg]:text-piccolo"
            >
              <select
                class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-[1rem] text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none h-14 rounded-moon-i-sm rtl:[&:not([disabled])]:hover:rounded-moon-i-sm rtl:[&:not([disabled])]:focus:rounded-moon-i-sm rtl:invalid:rounded-moon-i-sm ltr:[&:not([disabled])]:hover:rounded-moon-i-sm ltr:[&:not([disabled])]:focus:rounded-moon-i-sm ltr:invalid:rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err pt-[1.125rem]"
                id="c-1"
              >
                <option
                  value="Italy"
                >
                  Italy
                </option>
                <option
                  value="Spain"
                >
                  Spain
                </option>
                <option
                  value="China"
                >
                  China
                </option>
                <option
                  value="Germany"
                >
                  Germany
                </option>
              </select>
              <label
                class="absolute text-trunks z-[1] transition-all ease-in-out duration-200 rtl:right-4 ltr:left-4 text-[0.75rem] leading-3 top-3"
              >
                Country / Region
              </label>
              <svg
                class="absolute top-1/2 ltr:right-3 rtl:left-3 -translate-y-1/2 z-5 pointer-events-none text-trunks flex-shrink-0 transition-transform text-moon-24"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M22 13l-6 6-6-6"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </span>
            <p
              class="inline-block mt-2 ps-4 text-moon-12 text-piccolo"
              role="alert"
            >
              Informative message holder
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <div
        class="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
      >
        <div
          class="w-full"
        >
          <span
            class="block relative w-full max-w-full rounded-moon-i-sm bg-gohan [&_select]:bg-frieza-10 [&_select]:text-piccolo [&_svg]:text-piccolo"
          >
            <select
              class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-[1rem] text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none h-14 rounded-moon-i-sm rtl:[&:not([disabled])]:hover:rounded-moon-i-sm rtl:[&:not([disabled])]:focus:rounded-moon-i-sm rtl:invalid:rounded-moon-i-sm ltr:[&:not([disabled])]:hover:rounded-moon-i-sm ltr:[&:not([disabled])]:focus:rounded-moon-i-sm ltr:invalid:rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err pt-[1.125rem]"
              id="c-1"
            >
              <option
                value="Italy"
              >
                Italy
              </option>
              <option
                value="Spain"
              >
                Spain
              </option>
              <option
                value="China"
              >
                China
              </option>
              <option
                value="Germany"
              >
                Germany
              </option>
            </select>
            <label
              class="absolute text-trunks z-[1] transition-all ease-in-out duration-200 rtl:right-4 ltr:left-4 text-[0.75rem] leading-3 top-3"
            >
              Country / Region
            </label>
            <svg
              class="absolute top-1/2 ltr:right-3 rtl:left-3 -translate-y-1/2 z-5 pointer-events-none text-trunks flex-shrink-0 transition-transform text-moon-24"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 13l-6 6-6-6"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <p
            class="inline-block mt-2 ps-4 text-moon-12 text-piccolo"
            role="alert"
          >
            Informative message holder
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Input in RTL renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <span
          class="block relative w-full max-w-full rounded-moon-i-sm bg-gohan"
        >
          <select
            class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-[1rem] text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none h-14 rounded-moon-i-sm rtl:[&:not([disabled])]:hover:rounded-moon-i-sm rtl:[&:not([disabled])]:focus:rounded-moon-i-sm rtl:invalid:rounded-moon-i-sm ltr:[&:not([disabled])]:hover:rounded-moon-i-sm ltr:[&:not([disabled])]:focus:rounded-moon-i-sm ltr:invalid:rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err pt-[1.125rem]"
          >
            <option
              value="Italy"
            >
              Italy
            </option>
            <option
              value="Spain"
            >
              Spain
            </option>
            <option
              value="China"
            >
              China
            </option>
            <option
              value="Germany"
            >
              Germany
            </option>
          </select>
          <label
            class="absolute text-trunks z-[1] transition-all ease-in-out duration-200 rtl:right-4 ltr:left-4 text-[0.75rem] leading-3 top-3"
          >
            Country / Region
          </label>
          <svg
            class="absolute top-1/2 ltr:right-3 rtl:left-3 -translate-y-1/2 z-5 pointer-events-none text-trunks flex-shrink-0 transition-transform text-moon-24"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 13l-6 6-6-6"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <span
        class="block relative w-full max-w-full rounded-moon-i-sm bg-gohan"
      >
        <select
          class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-[1rem] text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none h-14 rounded-moon-i-sm rtl:[&:not([disabled])]:hover:rounded-moon-i-sm rtl:[&:not([disabled])]:focus:rounded-moon-i-sm rtl:invalid:rounded-moon-i-sm ltr:[&:not([disabled])]:hover:rounded-moon-i-sm ltr:[&:not([disabled])]:focus:rounded-moon-i-sm ltr:invalid:rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err pt-[1.125rem]"
        >
          <option
            value="Italy"
          >
            Italy
          </option>
          <option
            value="Spain"
          >
            Spain
          </option>
          <option
            value="China"
          >
            China
          </option>
          <option
            value="Germany"
          >
            Germany
          </option>
        </select>
        <label
          class="absolute text-trunks z-[1] transition-all ease-in-out duration-200 rtl:right-4 ltr:left-4 text-[0.75rem] leading-3 top-3"
        >
          Country / Region
        </label>
        <svg
          class="absolute top-1/2 ltr:right-3 rtl:left-3 -translate-y-1/2 z-5 pointer-events-none text-trunks flex-shrink-0 transition-transform text-moon-24"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22 13l-6 6-6-6"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Input in RTL renders States 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <div
          class="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
        >
          <div
            class="w-full"
          >
            <span
              class="block relative w-full max-w-full rounded-moon-i-sm bg-gohan opacity-30 cursor-not-allowed"
            >
              <select
                class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-[1rem] text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input focus:shadow-input-focus focus:outline-none h-14 rounded-moon-i-sm rtl:[&:not([disabled])]:hover:rounded-moon-i-sm rtl:[&:not([disabled])]:focus:rounded-moon-i-sm rtl:invalid:rounded-moon-i-sm ltr:[&:not([disabled])]:hover:rounded-moon-i-sm ltr:[&:not([disabled])]:focus:rounded-moon-i-sm ltr:invalid:rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err pt-[1.125rem] cursor-not-allowed hover:shadow-input"
                disabled=""
                id="dis-1"
              >
                <option
                  value="Italy"
                >
                  Italy
                </option>
                <option
                  value="Spain"
                >
                  Spain
                </option>
                <option
                  value="China"
                >
                  China
                </option>
                <option
                  value="Germany"
                >
                  Germany
                </option>
              </select>
              <label
                class="absolute text-trunks z-[1] transition-all ease-in-out duration-200 rtl:right-4 ltr:left-4 text-[0.75rem] leading-3 top-3"
              >
                Disabled
              </label>
              <svg
                class="absolute top-1/2 ltr:right-3 rtl:left-3 -translate-y-1/2 z-5 pointer-events-none text-trunks flex-shrink-0 transition-transform text-moon-24"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M22 13l-6 6-6-6"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </span>
            <p
              class="inline-block mt-2 ps-4 text-moon-12 text-trunks opacity-30 cursor-not-allowed"
              role="alert"
            >
              Informative message holder
            </p>
          </div>
          <div
            class="w-full"
          >
            <span
              class="block relative w-full max-w-full rounded-moon-i-sm bg-gohan"
            >
              <select
                class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-[1rem] text-bulma transition-shadow box-border relative z-[2] bg-transparent focus:outline-none shadow-input-err hover:shadow-input-err focus:shadow-input-err h-14 rounded-moon-i-sm rtl:[&:not([disabled])]:hover:rounded-moon-i-sm rtl:[&:not([disabled])]:focus:rounded-moon-i-sm rtl:invalid:rounded-moon-i-sm ltr:[&:not([disabled])]:hover:rounded-moon-i-sm ltr:[&:not([disabled])]:focus:rounded-moon-i-sm ltr:invalid:rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err pt-[1.125rem]"
                id="err-1"
              >
                <option
                  value="Italy"
                >
                  Italy
                </option>
                <option
                  value="Spain"
                >
                  Spain
                </option>
                <option
                  value="China"
                >
                  China
                </option>
                <option
                  value="Germany"
                >
                  Germany
                </option>
              </select>
              <label
                class="absolute text-trunks z-[1] transition-all ease-in-out duration-200 rtl:right-4 ltr:left-4 text-[0.75rem] leading-3 top-3"
              >
                Error
              </label>
              <svg
                class="absolute top-1/2 ltr:right-3 rtl:left-3 -translate-y-1/2 z-5 pointer-events-none text-trunks flex-shrink-0 transition-transform text-moon-24"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M22 13l-6 6-6-6"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </span>
            <p
              class="inline-block mt-2 ps-4 text-moon-12 text-chichi"
              role="alert"
            >
              Error message
            </p>
          </div>
          <div
            class="w-full"
          >
            <span
              class="block relative w-full max-w-full rounded-moon-i-sm bg-gohan cursor-not-allowed"
            >
              <select
                class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-[1rem] text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input focus:shadow-input-focus focus:outline-none h-14 rounded-moon-i-sm rtl:[&:not([disabled])]:hover:rounded-moon-i-sm rtl:[&:not([disabled])]:focus:rounded-moon-i-sm rtl:invalid:rounded-moon-i-sm ltr:[&:not([disabled])]:hover:rounded-moon-i-sm ltr:[&:not([disabled])]:focus:rounded-moon-i-sm ltr:invalid:rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err pt-[1.125rem] cursor-not-allowed hover:shadow-input"
                disabled=""
                id="ro-1"
              >
                <option
                  value="Italy"
                >
                  Italy
                </option>
                <option
                  value="Spain"
                >
                  Spain
                </option>
                <option
                  value="China"
                >
                  China
                </option>
                <option
                  value="Germany"
                >
                  Germany
                </option>
              </select>
              <label
                class="absolute text-trunks z-[1] transition-all ease-in-out duration-200 rtl:right-4 ltr:left-4 text-[0.75rem] leading-3 top-3"
              >
                Read only
              </label>
              <svg
                class="absolute top-1/2 ltr:right-3 rtl:left-3 -translate-y-1/2 z-5 pointer-events-none text-trunks flex-shrink-0 transition-transform text-moon-24"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M22 13l-6 6-6-6"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </span>
            <p
              class="inline-block mt-2 ps-4 text-moon-12 text-trunks"
              role="alert"
            >
              Informative message holder
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <div
        class="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
      >
        <div
          class="w-full"
        >
          <span
            class="block relative w-full max-w-full rounded-moon-i-sm bg-gohan opacity-30 cursor-not-allowed"
          >
            <select
              class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-[1rem] text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input focus:shadow-input-focus focus:outline-none h-14 rounded-moon-i-sm rtl:[&:not([disabled])]:hover:rounded-moon-i-sm rtl:[&:not([disabled])]:focus:rounded-moon-i-sm rtl:invalid:rounded-moon-i-sm ltr:[&:not([disabled])]:hover:rounded-moon-i-sm ltr:[&:not([disabled])]:focus:rounded-moon-i-sm ltr:invalid:rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err pt-[1.125rem] cursor-not-allowed hover:shadow-input"
              disabled=""
              id="dis-1"
            >
              <option
                value="Italy"
              >
                Italy
              </option>
              <option
                value="Spain"
              >
                Spain
              </option>
              <option
                value="China"
              >
                China
              </option>
              <option
                value="Germany"
              >
                Germany
              </option>
            </select>
            <label
              class="absolute text-trunks z-[1] transition-all ease-in-out duration-200 rtl:right-4 ltr:left-4 text-[0.75rem] leading-3 top-3"
            >
              Disabled
            </label>
            <svg
              class="absolute top-1/2 ltr:right-3 rtl:left-3 -translate-y-1/2 z-5 pointer-events-none text-trunks flex-shrink-0 transition-transform text-moon-24"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 13l-6 6-6-6"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <p
            class="inline-block mt-2 ps-4 text-moon-12 text-trunks opacity-30 cursor-not-allowed"
            role="alert"
          >
            Informative message holder
          </p>
        </div>
        <div
          class="w-full"
        >
          <span
            class="block relative w-full max-w-full rounded-moon-i-sm bg-gohan"
          >
            <select
              class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-[1rem] text-bulma transition-shadow box-border relative z-[2] bg-transparent focus:outline-none shadow-input-err hover:shadow-input-err focus:shadow-input-err h-14 rounded-moon-i-sm rtl:[&:not([disabled])]:hover:rounded-moon-i-sm rtl:[&:not([disabled])]:focus:rounded-moon-i-sm rtl:invalid:rounded-moon-i-sm ltr:[&:not([disabled])]:hover:rounded-moon-i-sm ltr:[&:not([disabled])]:focus:rounded-moon-i-sm ltr:invalid:rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err pt-[1.125rem]"
              id="err-1"
            >
              <option
                value="Italy"
              >
                Italy
              </option>
              <option
                value="Spain"
              >
                Spain
              </option>
              <option
                value="China"
              >
                China
              </option>
              <option
                value="Germany"
              >
                Germany
              </option>
            </select>
            <label
              class="absolute text-trunks z-[1] transition-all ease-in-out duration-200 rtl:right-4 ltr:left-4 text-[0.75rem] leading-3 top-3"
            >
              Error
            </label>
            <svg
              class="absolute top-1/2 ltr:right-3 rtl:left-3 -translate-y-1/2 z-5 pointer-events-none text-trunks flex-shrink-0 transition-transform text-moon-24"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 13l-6 6-6-6"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <p
            class="inline-block mt-2 ps-4 text-moon-12 text-chichi"
            role="alert"
          >
            Error message
          </p>
        </div>
        <div
          class="w-full"
        >
          <span
            class="block relative w-full max-w-full rounded-moon-i-sm bg-gohan cursor-not-allowed"
          >
            <select
              class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-[1rem] text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input focus:shadow-input-focus focus:outline-none h-14 rounded-moon-i-sm rtl:[&:not([disabled])]:hover:rounded-moon-i-sm rtl:[&:not([disabled])]:focus:rounded-moon-i-sm rtl:invalid:rounded-moon-i-sm ltr:[&:not([disabled])]:hover:rounded-moon-i-sm ltr:[&:not([disabled])]:focus:rounded-moon-i-sm ltr:invalid:rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err pt-[1.125rem] cursor-not-allowed hover:shadow-input"
              disabled=""
              id="ro-1"
            >
              <option
                value="Italy"
              >
                Italy
              </option>
              <option
                value="Spain"
              >
                Spain
              </option>
              <option
                value="China"
              >
                China
              </option>
              <option
                value="Germany"
              >
                Germany
              </option>
            </select>
            <label
              class="absolute text-trunks z-[1] transition-all ease-in-out duration-200 rtl:right-4 ltr:left-4 text-[0.75rem] leading-3 top-3"
            >
              Read only
            </label>
            <svg
              class="absolute top-1/2 ltr:right-3 rtl:left-3 -translate-y-1/2 z-5 pointer-events-none text-trunks flex-shrink-0 transition-transform text-moon-24"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 13l-6 6-6-6"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <p
            class="inline-block mt-2 ps-4 text-moon-12 text-trunks"
            role="alert"
          >
            Informative message holder
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`InsetNativeSelect renders Bg 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
      >
        <div
          class="w-full"
        >
          <span
            class="block relative w-full max-w-full rounded-moon-i-sm bg-gohan [&_select]:bg-frieza-10 [&_select]:text-piccolo [&_svg]:text-piccolo"
          >
            <select
              class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-[1rem] text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none h-14 rounded-moon-i-sm rtl:[&:not([disabled])]:hover:rounded-moon-i-sm rtl:[&:not([disabled])]:focus:rounded-moon-i-sm rtl:invalid:rounded-moon-i-sm ltr:[&:not([disabled])]:hover:rounded-moon-i-sm ltr:[&:not([disabled])]:focus:rounded-moon-i-sm ltr:invalid:rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err pt-[1.125rem]"
              id="c-1"
            >
              <option
                value="Italy"
              >
                Italy
              </option>
              <option
                value="Spain"
              >
                Spain
              </option>
              <option
                value="China"
              >
                China
              </option>
              <option
                value="Germany"
              >
                Germany
              </option>
            </select>
            <label
              class="absolute text-trunks z-[1] transition-all ease-in-out duration-200 rtl:right-4 ltr:left-4 text-[0.75rem] leading-3 top-3"
            >
              Country / Region
            </label>
            <svg
              class="absolute top-1/2 ltr:right-3 rtl:left-3 -translate-y-1/2 z-5 pointer-events-none text-trunks flex-shrink-0 transition-transform text-moon-24"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 13l-6 6-6-6"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <p
            class="inline-block mt-2 ps-4 text-moon-12 text-piccolo"
            role="alert"
          >
            Informative message holder
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
    >
      <div
        class="w-full"
      >
        <span
          class="block relative w-full max-w-full rounded-moon-i-sm bg-gohan [&_select]:bg-frieza-10 [&_select]:text-piccolo [&_svg]:text-piccolo"
        >
          <select
            class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-[1rem] text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none h-14 rounded-moon-i-sm rtl:[&:not([disabled])]:hover:rounded-moon-i-sm rtl:[&:not([disabled])]:focus:rounded-moon-i-sm rtl:invalid:rounded-moon-i-sm ltr:[&:not([disabled])]:hover:rounded-moon-i-sm ltr:[&:not([disabled])]:focus:rounded-moon-i-sm ltr:invalid:rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err pt-[1.125rem]"
            id="c-1"
          >
            <option
              value="Italy"
            >
              Italy
            </option>
            <option
              value="Spain"
            >
              Spain
            </option>
            <option
              value="China"
            >
              China
            </option>
            <option
              value="Germany"
            >
              Germany
            </option>
          </select>
          <label
            class="absolute text-trunks z-[1] transition-all ease-in-out duration-200 rtl:right-4 ltr:left-4 text-[0.75rem] leading-3 top-3"
          >
            Country / Region
          </label>
          <svg
            class="absolute top-1/2 ltr:right-3 rtl:left-3 -translate-y-1/2 z-5 pointer-events-none text-trunks flex-shrink-0 transition-transform text-moon-24"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 13l-6 6-6-6"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
        <p
          class="inline-block mt-2 ps-4 text-moon-12 text-piccolo"
          role="alert"
        >
          Informative message holder
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`InsetNativeSelect renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="block relative w-full max-w-full rounded-moon-i-sm bg-gohan"
      >
        <select
          class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-[1rem] text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none h-14 rounded-moon-i-sm rtl:[&:not([disabled])]:hover:rounded-moon-i-sm rtl:[&:not([disabled])]:focus:rounded-moon-i-sm rtl:invalid:rounded-moon-i-sm ltr:[&:not([disabled])]:hover:rounded-moon-i-sm ltr:[&:not([disabled])]:focus:rounded-moon-i-sm ltr:invalid:rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err pt-[1.125rem]"
        >
          <option
            value="Italy"
          >
            Italy
          </option>
          <option
            value="Spain"
          >
            Spain
          </option>
          <option
            value="China"
          >
            China
          </option>
          <option
            value="Germany"
          >
            Germany
          </option>
        </select>
        <label
          class="absolute text-trunks z-[1] transition-all ease-in-out duration-200 rtl:right-4 ltr:left-4 text-[0.75rem] leading-3 top-3"
        >
          Country / Region
        </label>
        <svg
          class="absolute top-1/2 ltr:right-3 rtl:left-3 -translate-y-1/2 z-5 pointer-events-none text-trunks flex-shrink-0 transition-transform text-moon-24"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22 13l-6 6-6-6"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      class="block relative w-full max-w-full rounded-moon-i-sm bg-gohan"
    >
      <select
        class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-[1rem] text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none h-14 rounded-moon-i-sm rtl:[&:not([disabled])]:hover:rounded-moon-i-sm rtl:[&:not([disabled])]:focus:rounded-moon-i-sm rtl:invalid:rounded-moon-i-sm ltr:[&:not([disabled])]:hover:rounded-moon-i-sm ltr:[&:not([disabled])]:focus:rounded-moon-i-sm ltr:invalid:rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err pt-[1.125rem]"
      >
        <option
          value="Italy"
        >
          Italy
        </option>
        <option
          value="Spain"
        >
          Spain
        </option>
        <option
          value="China"
        >
          China
        </option>
        <option
          value="Germany"
        >
          Germany
        </option>
      </select>
      <label
        class="absolute text-trunks z-[1] transition-all ease-in-out duration-200 rtl:right-4 ltr:left-4 text-[0.75rem] leading-3 top-3"
      >
        Country / Region
      </label>
      <svg
        class="absolute top-1/2 ltr:right-3 rtl:left-3 -translate-y-1/2 z-5 pointer-events-none text-trunks flex-shrink-0 transition-transform text-moon-24"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 13l-6 6-6-6"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`InsetNativeSelect renders States 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
      >
        <div
          class="w-full"
        >
          <span
            class="block relative w-full max-w-full rounded-moon-i-sm bg-gohan opacity-30 cursor-not-allowed"
          >
            <select
              class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-[1rem] text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input focus:shadow-input-focus focus:outline-none h-14 rounded-moon-i-sm rtl:[&:not([disabled])]:hover:rounded-moon-i-sm rtl:[&:not([disabled])]:focus:rounded-moon-i-sm rtl:invalid:rounded-moon-i-sm ltr:[&:not([disabled])]:hover:rounded-moon-i-sm ltr:[&:not([disabled])]:focus:rounded-moon-i-sm ltr:invalid:rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err pt-[1.125rem] cursor-not-allowed hover:shadow-input"
              disabled=""
              id="dis-1"
            >
              <option
                value="Italy"
              >
                Italy
              </option>
              <option
                value="Spain"
              >
                Spain
              </option>
              <option
                value="China"
              >
                China
              </option>
              <option
                value="Germany"
              >
                Germany
              </option>
            </select>
            <label
              class="absolute text-trunks z-[1] transition-all ease-in-out duration-200 rtl:right-4 ltr:left-4 text-[0.75rem] leading-3 top-3"
            >
              Disabled
            </label>
            <svg
              class="absolute top-1/2 ltr:right-3 rtl:left-3 -translate-y-1/2 z-5 pointer-events-none text-trunks flex-shrink-0 transition-transform text-moon-24"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 13l-6 6-6-6"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <p
            class="inline-block mt-2 ps-4 text-moon-12 text-trunks opacity-30 cursor-not-allowed"
            role="alert"
          >
            Informative message holder
          </p>
        </div>
        <div
          class="w-full"
        >
          <span
            class="block relative w-full max-w-full rounded-moon-i-sm bg-gohan"
          >
            <select
              class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-[1rem] text-bulma transition-shadow box-border relative z-[2] bg-transparent focus:outline-none shadow-input-err hover:shadow-input-err focus:shadow-input-err h-14 rounded-moon-i-sm rtl:[&:not([disabled])]:hover:rounded-moon-i-sm rtl:[&:not([disabled])]:focus:rounded-moon-i-sm rtl:invalid:rounded-moon-i-sm ltr:[&:not([disabled])]:hover:rounded-moon-i-sm ltr:[&:not([disabled])]:focus:rounded-moon-i-sm ltr:invalid:rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err pt-[1.125rem]"
              id="err-1"
            >
              <option
                value="Italy"
              >
                Italy
              </option>
              <option
                value="Spain"
              >
                Spain
              </option>
              <option
                value="China"
              >
                China
              </option>
              <option
                value="Germany"
              >
                Germany
              </option>
            </select>
            <label
              class="absolute text-trunks z-[1] transition-all ease-in-out duration-200 rtl:right-4 ltr:left-4 text-[0.75rem] leading-3 top-3"
            >
              Error
            </label>
            <svg
              class="absolute top-1/2 ltr:right-3 rtl:left-3 -translate-y-1/2 z-5 pointer-events-none text-trunks flex-shrink-0 transition-transform text-moon-24"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 13l-6 6-6-6"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <p
            class="inline-block mt-2 ps-4 text-moon-12 text-chichi"
            role="alert"
          >
            Error message
          </p>
        </div>
        <div
          class="w-full"
        >
          <span
            class="block relative w-full max-w-full rounded-moon-i-sm bg-gohan cursor-not-allowed"
          >
            <select
              class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-[1rem] text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input focus:shadow-input-focus focus:outline-none h-14 rounded-moon-i-sm rtl:[&:not([disabled])]:hover:rounded-moon-i-sm rtl:[&:not([disabled])]:focus:rounded-moon-i-sm rtl:invalid:rounded-moon-i-sm ltr:[&:not([disabled])]:hover:rounded-moon-i-sm ltr:[&:not([disabled])]:focus:rounded-moon-i-sm ltr:invalid:rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err pt-[1.125rem] cursor-not-allowed hover:shadow-input"
              disabled=""
              id="ro-1"
            >
              <option
                value="Italy"
              >
                Italy
              </option>
              <option
                value="Spain"
              >
                Spain
              </option>
              <option
                value="China"
              >
                China
              </option>
              <option
                value="Germany"
              >
                Germany
              </option>
            </select>
            <label
              class="absolute text-trunks z-[1] transition-all ease-in-out duration-200 rtl:right-4 ltr:left-4 text-[0.75rem] leading-3 top-3"
            >
              Read only
            </label>
            <svg
              class="absolute top-1/2 ltr:right-3 rtl:left-3 -translate-y-1/2 z-5 pointer-events-none text-trunks flex-shrink-0 transition-transform text-moon-24"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 13l-6 6-6-6"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <p
            class="inline-block mt-2 ps-4 text-moon-12 text-trunks"
            role="alert"
          >
            Informative message holder
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
    >
      <div
        class="w-full"
      >
        <span
          class="block relative w-full max-w-full rounded-moon-i-sm bg-gohan opacity-30 cursor-not-allowed"
        >
          <select
            class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-[1rem] text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input focus:shadow-input-focus focus:outline-none h-14 rounded-moon-i-sm rtl:[&:not([disabled])]:hover:rounded-moon-i-sm rtl:[&:not([disabled])]:focus:rounded-moon-i-sm rtl:invalid:rounded-moon-i-sm ltr:[&:not([disabled])]:hover:rounded-moon-i-sm ltr:[&:not([disabled])]:focus:rounded-moon-i-sm ltr:invalid:rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err pt-[1.125rem] cursor-not-allowed hover:shadow-input"
            disabled=""
            id="dis-1"
          >
            <option
              value="Italy"
            >
              Italy
            </option>
            <option
              value="Spain"
            >
              Spain
            </option>
            <option
              value="China"
            >
              China
            </option>
            <option
              value="Germany"
            >
              Germany
            </option>
          </select>
          <label
            class="absolute text-trunks z-[1] transition-all ease-in-out duration-200 rtl:right-4 ltr:left-4 text-[0.75rem] leading-3 top-3"
          >
            Disabled
          </label>
          <svg
            class="absolute top-1/2 ltr:right-3 rtl:left-3 -translate-y-1/2 z-5 pointer-events-none text-trunks flex-shrink-0 transition-transform text-moon-24"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 13l-6 6-6-6"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
        <p
          class="inline-block mt-2 ps-4 text-moon-12 text-trunks opacity-30 cursor-not-allowed"
          role="alert"
        >
          Informative message holder
        </p>
      </div>
      <div
        class="w-full"
      >
        <span
          class="block relative w-full max-w-full rounded-moon-i-sm bg-gohan"
        >
          <select
            class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-[1rem] text-bulma transition-shadow box-border relative z-[2] bg-transparent focus:outline-none shadow-input-err hover:shadow-input-err focus:shadow-input-err h-14 rounded-moon-i-sm rtl:[&:not([disabled])]:hover:rounded-moon-i-sm rtl:[&:not([disabled])]:focus:rounded-moon-i-sm rtl:invalid:rounded-moon-i-sm ltr:[&:not([disabled])]:hover:rounded-moon-i-sm ltr:[&:not([disabled])]:focus:rounded-moon-i-sm ltr:invalid:rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err pt-[1.125rem]"
            id="err-1"
          >
            <option
              value="Italy"
            >
              Italy
            </option>
            <option
              value="Spain"
            >
              Spain
            </option>
            <option
              value="China"
            >
              China
            </option>
            <option
              value="Germany"
            >
              Germany
            </option>
          </select>
          <label
            class="absolute text-trunks z-[1] transition-all ease-in-out duration-200 rtl:right-4 ltr:left-4 text-[0.75rem] leading-3 top-3"
          >
            Error
          </label>
          <svg
            class="absolute top-1/2 ltr:right-3 rtl:left-3 -translate-y-1/2 z-5 pointer-events-none text-trunks flex-shrink-0 transition-transform text-moon-24"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 13l-6 6-6-6"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
        <p
          class="inline-block mt-2 ps-4 text-moon-12 text-chichi"
          role="alert"
        >
          Error message
        </p>
      </div>
      <div
        class="w-full"
      >
        <span
          class="block relative w-full max-w-full rounded-moon-i-sm bg-gohan cursor-not-allowed"
        >
          <select
            class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-[1rem] text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input focus:shadow-input-focus focus:outline-none h-14 rounded-moon-i-sm rtl:[&:not([disabled])]:hover:rounded-moon-i-sm rtl:[&:not([disabled])]:focus:rounded-moon-i-sm rtl:invalid:rounded-moon-i-sm ltr:[&:not([disabled])]:hover:rounded-moon-i-sm ltr:[&:not([disabled])]:focus:rounded-moon-i-sm ltr:invalid:rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err pt-[1.125rem] cursor-not-allowed hover:shadow-input"
            disabled=""
            id="ro-1"
          >
            <option
              value="Italy"
            >
              Italy
            </option>
            <option
              value="Spain"
            >
              Spain
            </option>
            <option
              value="China"
            >
              China
            </option>
            <option
              value="Germany"
            >
              Germany
            </option>
          </select>
          <label
            class="absolute text-trunks z-[1] transition-all ease-in-out duration-200 rtl:right-4 ltr:left-4 text-[0.75rem] leading-3 top-3"
          >
            Read only
          </label>
          <svg
            class="absolute top-1/2 ltr:right-3 rtl:left-3 -translate-y-1/2 z-5 pointer-events-none text-trunks flex-shrink-0 transition-transform text-moon-24"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 13l-6 6-6-6"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
        <p
          class="inline-block mt-2 ps-4 text-moon-12 text-trunks"
          role="alert"
        >
          Informative message holder
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
